fixed a couple spacing issues

--- a/public/style.css
+++ b/public/style.css
@@ -87,19 +87,21 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 
 .createList__form {
 	background-color: #616876;
+	padding: 30px 0;
 }
 
 .formContainer {
 	color: rgb(90, 95, 111);
-	margin-top: 30px;
+	margin-top: 20px;
 }
 
 .formContainer--flex {
 	display: flex;
+	margin-top: 5px;
 }
 
 .uniqueList__formWrapper {
-	padding: 50px;
+	padding: 40px 50px 40px 50px;
 	background-color: #616876;
 	color: white;
 }
@@ -223,7 +225,7 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 }
 
 .uniqueList__button {
-	margin-top: 20px;
+	margin-top: 25px;
 	margin-bottom: 10px;
 	font-size: 16px;
 }
